v0.5 border-box;overflow fixed

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -74,7 +74,7 @@
 .headerSearch {
   
   height: 4rem;
-  background-color: var(--clr-light-white);
+  background-color: var(--clr-light-white2);
   border: 1px solid var(--clr-theme);
 box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   display: flex;
